cabal-version:      2.4
name:               hs-blog
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           A custom blog generator from markup files

-- A longer description of the package.
description:        This package provides a static blog generator
                    from a custom markup format to HTML.

homepage:           https://github.com/ANOLASC/hs-blog
-- A URL where users can report bugs.
bug-reports:        https://github.com/ANOLASC/hs-blog/issues

-- The license under which the package is released.
-- license:
author:             ANOLASC
maintainer:         22795996+ANOLASC@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-settings
    ghc-options:        -Wall

library
    import:             common-settings
    hs-source-dirs:     src
    build-depends:      base ^>=4.16.3.0    
    exposed-modules:
        HsBlog
            HsBlog.Convert
            HsBlog.Html
                HsBlog.Html.Internal
            HsBlog.Markup         

executable hs-blog
    main-is:          Main.hs
    import:           common-settings
    -- Modules included in this executable, other than Main.
    other-modules:    OptParse

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0, hs-blog, optparse-applicative, directory
    hs-source-dirs:   app
    default-language: Haskell2010
